@@ -1,3 +1,7 @@
+2007-09-13  John Verzani  <jverzani@gmail.com>
+
+	* R/gtree.R: fixed issue with offspring and icons
+
 2007-08-30  John Verzani  <jverzani@gmail.com>
 
 	* R/ggrid.R (make.row.names): Fixed issue with value being a
